# test-task

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml  security.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: audit.py  events.py  health.py  metrics.py  rules.py
backend/app/cef/: models.py  parser.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/observability/: event_repository.py  event_writer.py  events_buffer.py  metrics.py
backend/app/proxy/: forwarder.py  listener.py  pipeline.py
backend/app/rules/: engine.py  models.py  repository.py  store.py
backend/config/: rules.schema.json  rules.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_api.py  test_cef_parser.py  test_db_integration.py  test_e2e.py  test_forwarder.py  test_pipeline.py  test_rule_engine.py  test_rule_models.py  test_rule_store.py
backend/tools/: generate_cef.py  mock_elk_receiver.py
docs/: 00-index.md  01-research-what-why.md  02-architecture.md  03-devsecops.md  ASSUMPTIONS.md
frontend/: .gitignore  README.md  biome.json  bun.lockb  package.json  tsconfig.base.json  turbo.json
frontend/apps/web/: next.config.ts  package.json
frontend/apps/web/app/: layout.tsx
frontend/apps/web/components/dashboard/: dashboard.tsx  dry-run.tsx  events-panel.tsx  metrics-cards.tsx  panel.tsx  rule-editor.tsx  rules-panel.tsx
frontend/apps/web/lib/: api.ts  format.ts
