[project]
name = "cef-filter-proxy"
version = "0.1.0"
description = "A filtering proxy for CEF/Syslog security alerts: receive over UDP, filter on field values, forward to an ELK receiver."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "sse-starlette>=2.2.1",
    "rich>=14.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "types-pyyaml>=6.0.12",
    "pre-commit>=4.1.0",
]
# Security tooling that runs in CI. Pinned here so `uv run` reproduces the
# exact versions locally that the pipeline gates on.
security = [
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.7.3",
]

[project.scripts]
cef-proxy = "app.main:run"
cef-generate = "tools.generate_cef:main"
cef-mock-elk = "tools.mock_elk_receiver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tools"]

# =============================================================================
# Ruff — linter + formatter (mirrors the reference backend's ruleset)
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [".git", ".venv", "__pycache__", ".mypy_cache", ".ruff_cache", "migrations"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "C4", "DTZ", "T10", "EM", "FA",
    "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF",
    "SLOT", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "FLY", "PERF", "FURB",
    "LOG", "RUF", "S",
]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # function call in argument defaults (FastAPI Depends)
    "ISC001",  # conflicts with the formatter
    "TRY003",  # long exception messages
    "EM101",   # raw string in exception
    "EM102",   # f-string in exception
    "PLR2004", # magic value comparison
    "PLR0911", # too many return statements (operator dispatch)
    "PLR0912", # too many branches (operator dispatch)
    "PLR0913", # too many arguments (config-heavy constructors)
    "PLC0415", # lazy imports inside functions (intentional, e.g. uvicorn at run())
    "SIM105",  # try/except/pass reads clearer than contextlib.suppress one-liners
    "TRY400",  # logger.error (not .exception) for expected, traceback-free failures
    # Several type-only imports are needed at RUNTIME: FastAPI resolves Depends()
    # parameter annotations and Pydantic resolves field annotations against module
    # globals. Moving them into TYPE_CHECKING blocks (TC001/2/3) breaks resolution.
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is the point of tests
    "ARG",     # unused fixture/protocol-method args
    "PLR2004", # magic values in assertions
    "SLF001",  # private-member access (e.g. seeding store._ruleset)
    "S104",    # bind all interfaces
    "S106",    # hardcoded test token (function arg)
    "S107",    # hardcoded test token (default)
    "S311",    # non-crypto randomness
    "PT018",   # composite asserts are fine in tests
    "C408",    # dict() literal style in test helpers
    "UP012",   # explicit .encode() reads clearly in wire tests
]
"tools/**/*.py" = ["T201", "S104", "S311"]  # CLI tools print; bind/rand ok for test traffic

[tool.ruff.lint.isort]
known-first-party = ["app", "tools"]
lines-after-imports = 2

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# MyPy — pragmatic strictness
# =============================================================================
[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
no_implicit_optional = true
follow_imports = "silent"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "tools/"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# =============================================================================
# Pytest + coverage
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::UserWarning"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true
fail_under = 80

# =============================================================================
# Bandit — Python SAST (see .github/workflows/security.yml)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
